package nl.han.soex.twee.prototype.domain;

public record Activity(double price) implements BuildingBlock {
}
