package nl.han.soex.twee.prototype.domain;

public interface BuildingBlock {

    double price();
}
