package nl.han.soex.twee.prototype.domain;

public record Flight(double price) implements BuildingBlock {
}
