package nl.han.soex.twee.prototype.domain;

public record Food(double price) implements BuildingBlock {
}
